--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -178,30 +178,29 @@ body {
   text-decoration: underline;
 }
 
-.page-title {
+.title {
   text-align: center;
-  font-size: 20px;
+  color: var(--color-gray-dark);
+  font-size: 1.5rem;
   font-weight: 600;
-  color: var(--text);
-  margin: 0 0 8px 0;
-  padding-bottom: 16px;
-  border-bottom: 1px solid #ddd;
+  margin-bottom: 2rem;
 }
 
 .help-text {
-    font-size: 0.75rem;
-    color: var(--color-gray-dark);
-    margin-top: -0.25rem;
+  font-size: 0.75rem;
+  color: var(--color-gray-dark);
+  margin-top: -0.25rem;
 }
 
-label{
+label {
   font-size: 0.95rem;
   font-weight: 600;
   margin-bottom: 6px;
   display: block;
   color: var(--color-text);
 }
-input::placeholder{
+
+input::placeholder {
   color: var(--color-gray-light);
   font-size: 0.875rem;
 }
@@ -210,12 +209,33 @@ input::placeholder{
   flex: 1;
 }
 
+/* Divider */
+
+.divider {
+  height: 1px;
+  background: var(--color-border);
+  width: 100%;
+  margin: 12px 0;
+}
+/* ==============================
+   MEDIA QUERIES
+   ============================== */
+@media (max-width: 768px) {
+  .form-title {
+        font-size: 1.25rem;
+    }
+}
+
 @media (max-width: 480px) {
   .card-mobile-none {
     background-color: var(--color-white);
     border: none;
     box-shadow: none;
   }
+  .form-title {
+        font-size: 1.125rem;
+        margin-bottom: 1.5rem;
+    }
 }
 
 /* ==============================
