--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -130,6 +130,41 @@ body {
   border-color: var(--color-primary-dark);
 }
 
+.badge{
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--color-white);
+  text-transform: capitalize;
+}
+
+.badge-status--info {
+  background: var(--color-info);
+  color: var(--color-white);
+}
+
+.badge-status--success {
+  background: var(--color-success);
+  color: var(--color-white);
+}
+
+.badge-status--danger {
+  background: var(--color-danger);
+  color: var(--color-white);
+}
+
+.badge-status--warning {
+  background: var(--color-warning);
+  color: var(--color-white);
+}
+
+.text-success {
+  color: var(--color-success);
+  font-weight: 600;
+  align-self: flex-start;
+}
+
 .btn {
   padding: 12px 0;
   background: var(--color-primary);
@@ -192,7 +227,7 @@ body {
   margin-top: -0.25rem;
 }
 
-label {
+label , .label {
   font-size: 0.95rem;
   font-weight: 600;
   margin-bottom: 6px;
