--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -103,6 +103,7 @@ body {
   align-items: center;
 }
 
+/* INPUT */
 .input {
   padding: 8px 12px;
   border: 1px solid var(--color-gray-light);
@@ -110,25 +111,25 @@ body {
   font-size: var(--font-size-base);
   color: var(--color-gray-dark);
   transition: all 0.2s ease;
+  outline: none;
 }
 
 .input:focus {
   outline: none;
-  border-color: var(--color-primary-dark);
+  border-color: var(--color-gray-dark);
 }
 
 .input-primary {
-  padding: 8px 12px;
   border: 1.5px solid var(--color-primary);
-  border-radius: var(--radius-input);
-  font-size: var(--font-size-base);
-  outline: none;
   margin-bottom: 8px;
-  transition: border-color 0.2s;
 }
 
 .input-primary:focus {
   border-color: var(--color-primary-dark);
+}
+
+.input-full {
+  width: 100%;
 }
 
 .badge {
@@ -473,10 +474,6 @@ input::placeholder {
   color: #555;
   font-size: 1rem;
   margin-bottom: 18px;
-}
-
-.input-login {
-  width: 100%;
 }
 
 .password-container {
