--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -192,6 +192,13 @@ input::placeholder {
   text-transform: capitalize;
 }
 
+.badge-outline {
+  background: var(--color-white);
+  color: var(--color-primary);
+  border: 1px solid var(--color-primary);
+  padding: 2px 10px;
+} 
+
 .badge-status--info {
   background: var(--color-info);
   color: var(--color-white);
@@ -242,8 +249,14 @@ input::placeholder {
 .title {
   text-align: center;
   color: var(--color-title);
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   font-weight: 700;
+}
+
+.subtitle{
+  font-size: 1.05rem;
+  font-weight: 600;
+  color: var(--color-title);
 }
 
 .text-start {
