--- a/assets/css/usuario.css
+++ b/assets/css/usuario.css
@@ -61,7 +61,9 @@
 .book-cover {
   width: 100%;
   aspect-ratio: 3/4;
-  background: #d3d3d3;
+  height: auto;
+  max-height: 160px;
+  object-fit: cover;
   border-radius: 6px;
   margin-bottom: 6px;
 }
@@ -427,6 +429,7 @@
   position: relative;
   transition: .2s box-shadow;
   min-width: 250px;
+  gap : 8px;
 }
 
 .book-history-card .book-title {
@@ -437,6 +440,8 @@
 }
 
 .book-history-card .book-author {
+  margin-top: 15px;
+  margin-bottom: 10px;
   font-size: 0.98rem;
   color: var(--color-gray-dark);
 }
